Fix for extra padding on hamburger icon in mobile view.

--- a/sass/components/wxt/_wxt.scss
+++ b/sass/components/wxt/_wxt.scss
@@ -81,6 +81,10 @@ ul.action-links .glyphicon {
   margin-top: 0.5em;
 }
 
+.wb-mb-links .glyphicon-search:before {
+    float: left;
+}
+
 .wb-srch-multi {
     padding-top: 1em
 }
